--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
+    "cookies": "^0.9.1",
+    "dotenv": "^17.2.3",
     "formik": "^2.4.9",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
+    "nodemailer": "^7.0.12",
+    "otp-generator": "^4.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
